[tool.poetry]
name = "fixedpays"
version = "0.1.0"
description = ""
authors = ["DieNice <DailyPlanning@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
